Added read function and started update function

--- a/MongoDB_ER/.project
+++ b/MongoDB_ER/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>MongoDB_HospitalER</name>
+	<name>MongoDB_ER</name>
 	<comment></comment>
 	<projects>
 	</projects>
